FIX: blockquote style: word-wrap: break-word;

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -114,6 +114,7 @@ blockquote {
     font-size: 18px;
     letter-spacing: -1px;
     font-style: italic;
+    word-wrap: break-word;
 
     > :last-child {
         margin-bottom: 0;
